[package]
name = "swbcranksample"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

solana-sdk = "2.1.3"
solana-client = "2.3.13"

switchboard-on-demand = { version = "0.10.8", features = ["solana-v2", "client"] }
# switchboard-on-demand = "0.5.5"
# switchboard-on-demand-client = { version = "=0.4.1-alpha0.0.0" }
# switchboard-utils = "=0.9.2-alpha0.0.0"